# global-agent-hackathon-may-2025

submissions/knowledge-agent/: .gitignore  README.md  agents.py  app.py  pyproject.toml  utils.py
submissions/knowledge-agent/components/: analysis.py  footer.py  sidebar.py  sources.py
submissions/knowledge-agent/ui/: analysis.py  sidebar.py
